--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -32,8 +32,8 @@
         </button>
         <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" role="button"
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
                     <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
@@ -41,14 +41,14 @@
                         <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
                     </ul>
                 </li>
-                <li class="nav-item text-end">
+                <li class="nav-item text-end px-lg-3">
                     <a class="nav-link" href="#">OM OS</a>
                 </li>
-                <li class="nav-item text-end">
+                <li class="nav-item text-end px-lg-3">
                     <a class="nav-link" href="#">KONTAKT</a>
                 </li>
-                <li class="nav-item text-end">
-                    <a class="nav-link" href="Checkout.html">DIN KURV (0)</a>
+                <li class="nav-item text-end px-lg-3">
+                    <a class="nav-link" href="Checkout.html">DIN KURV</a>
                 </li>
             </ul>
         </div>
