--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -67,7 +67,7 @@
     <div class="row g-3">
         <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top px-lg-2" alt="chokolade">
+                <img src="images/Bestron-Chocolate-Fountain.jpg" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3 px-lg-2">Lej en chokoladefontæne</h4>
                 <p class="produktantal px-lg-2">1 stk.</p>
                 <span role="button" class="billede-knap">500 kr.</span>
@@ -75,7 +75,7 @@
         </div>
         <div class="col-sm-4 col-md-6 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top px-lg-2" alt="chokolade">
+                <img src="images/overtrukken.jpg" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3">Chokolade overtrukketjordbær</h4>
                 <p class="produktantal">8 stk.</p>
                 <span role="button" class="billede-knap">500 kr.</span>
@@ -83,7 +83,7 @@
         </div>
         <div class="col-sm-4 col-md-6 col-lg-4 pb-3 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top px-lg-2" alt="chokolade">
+                <img src="images/Chokolade-3styk.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3">Fyldte chokolader</h4>
                 <p class="produktantal">24 stk.</p>
                 <span role="button" class="billede-knap">500 kr.</span>
