--- a/Checkout.html
+++ b/Checkout.html
@@ -73,27 +73,22 @@
                                 <h5 class="mb-3"><span href="#" class="text-body"><i
                                         class="fas fa-long-arrow-alt-left me-2"></i>Fortsæt shopping</span></h5>
                                 <hr>
-                                <div class="d-flex justify-content-between align-items-center mb-4">
-                                    <div>
-                                        <h4 class="mb-0">Du har 3 ting i din kurv</h4>
-                                    </div>
-                                </div>
                                 <div class="card mb-3">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div>
-                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3"
+                                                    <img src="images/Chocobombs.png" class="img-fluid rounded-3"
                                                          alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5 style="font-size: 15px">X CHOKOLADE</h5>
-                                                    <p class="small mb-0">24 stk.</p>
+                                                    <h5 style="font-size: 15px">CHOCOBOMBS</h5>
+                                                    <p class="small mb-0">2 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0" style="font-size: 15px">200.00</h5>
+                                                    <h5 class="mb-0" style="font-size: 15px">200 kr.</h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
@@ -110,13 +105,13 @@
                                                          alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5 style="font-size: 15px">X CHOKOLADE</h5>
-                                                    <p class="small mb-0">12 stk.</p>
+                                                    <h5 style="font-size: 15px">CHOCO CLOUD</h5>
+                                                    <p class="small mb-0">1 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0" style="font-size: 15px">200.00</h5>
+                                                    <h5 class="mb-0" style="font-size: 15px">200 kr.</h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
@@ -129,17 +124,17 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div>
-                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3"
+                                                    <img src="images/Gaveæske.png" class="img-fluid rounded-3"
                                                          alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5 style="font-size: 15px">CHOKOLADE</h5>
-                                                    <p class="small mb-0">10 stk.</p>
+                                                    <h5 style="font-size: 15px">GAVEÆSKE</h5>
+                                                    <p class="small mb-0">1 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0" style="font-size: 15px">200.00</h5>
+                                                    <h5 class="mb-0" style="font-size: 15px">399 kr.</h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
