--- a/Checkout.html
+++ b/Checkout.html
@@ -145,22 +145,22 @@
 
                             <hr class="my-4">
 
-                            <div class="d-flex justify-content-between">
+                            <div class="d-flex justify-content-between" style="font-weight: 600">
                                 <p class="mb-2">Subtotal</p>
                                 <p class="mb-2">400.00 kr</p>
                             </div>
 
-                            <div class="d-flex justify-content-between">
+                            <div class="d-flex justify-content-between" style="font-weight: 600">
                                 <p class="mb-2">Click & Collect</p>
                                 <p class="mb-2">0 kr</p>
                             </div>
 
-                            <div class="d-flex justify-content-between mb-4">
+                            <div class="d-flex justify-content-between mb-4" style="font-weight: 600">
                                 <p class="mb-2">Total</p>
                                 <p class="mb-2">400.00 kr</p>
                             </div>
 
-                            <button type="button" class="btn btn-info btn-block btn-lg">
+                            <button type="button" class="btn btn-block btn-lg bg-lyseBrun" style="font-weight: 600">
                                 <div class="d-flex justify-content-between">
                                     <span style="font-size: 18px">400.00 kr</span>
                                     <span style="font-size: 18px">Fortsæt til betaling<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
