--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 		<div class="col col-md-12 col-lg-4">
 			<div class="card border-0 position-relative m-0"> <!-- style="width: 80%" -->
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
-                <span role="button" class="billede-knap">BØRNEVENLIGE</span>
+                <a href="Produkt-Børnevenligt.html"><span role="button" class="billede-knap">BØRNEVENLIGE</span></a>
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4">
 			<div class="card border-0 position-relative ">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
-                <span role="button" class="billede-knap">EKSKLUSIVE</span>
+                <a href="Produkt-Eksklusive.html"><span role="button" class="billede-knap">EKSKLUSIVE</span></a>
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4 pb-3">
 			<div class="card border-0 position-relative">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
-                <span role="button" class="billede-knap">FESTLIGE</span>
+                <a href="Produkt-Festlige.html"><span role="button" class="billede-knap">FESTLIGE</span></a>
 			</div>
 		</div>
 	</div>
@@ -102,7 +102,7 @@
             <a class="link-1" href="#">HJEM</a>
             <a href="#">OM OS</a>
             <a href="#">KONTAKT</a>
-            <a href="#">SHOP</a>
+            <a href="Checkout.html">DIN KURV</a>
         </p>
         <p>CHOCOLATE CLUB &copy; 2022</p>
     </div>
