--- a/Checkout.html
+++ b/Checkout.html
@@ -85,13 +85,13 @@
                                                              alt="Shopping item" style="width: 65px;">
                                                     </div>
                                                     <div class="ms-3">
-                                                        <h5 style="font-size: 15px">CHOCOBOMBS</h5>
+                                                        <h5 style="font-size: 15px">CHOCO BOMBS</h5>
                                                         <p class="small mb-0">2 stk.</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div style="width: 80px;">
-                                                        <h5 class="mb-0" style="font-size: 15px">200 kr.</h5>
+                                                        <h5 class="mb-0" style="font-size: 15px">199 kr.</h5>
                                                     </div>
                                                     <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                                 </div>
@@ -115,7 +115,7 @@
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div style="width: 80px;">
-                                                        <h5 class="mb-0" style="font-size: 15px">200 kr.</h5>
+                                                        <h5 class="mb-0" style="font-size: 15px">49 kr.</h5>
                                                     </div>
                                                     <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                                 </div>
@@ -152,7 +152,7 @@
                                 <div class="d-flex justify-content-between"
                                      style="font-weight: 600; text-transform: uppercase">
                                     <p class="mb-2">Subtotal</p>
-                                    <p class="mb-2">400.00 kr</p>
+                                    <p class="mb-2">647.00 kr</p>
                                 </div>
 
                                 <div class="d-flex justify-content-between"
@@ -164,11 +164,11 @@
                                 <div class="d-flex justify-content-between mb-4"
                                      style="font-weight: 600; text-transform: uppercase">
                                     <p class="mb-2">Total</p>
-                                    <p class="mb-2">400.00 kr</p>
+                                    <p class="mb-2">647.00 kr</p>
                                 </div>
 
                                 <button type="button" class="btn btn-block btn-lg bg-lyseBrun" style="font-weight: 600">
-                                    <div class="d-flex justify-content-between">
+                                    <div class="d-flex justify-content-end">
                                         <span style="font-size: 18px; text-transform: uppercase;">Fortsæt til betaling<i
                                                 class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                     </div>
